feat: expose profile creation management API
